--- a/Front/myApp/src-tauri/Cargo.toml
+++ b/Front/myApp/src-tauri/Cargo.toml
@@ -11,7 +11,7 @@ edition = "2021"
 tauri-build = { version = "1", features = [] }
 
 [dependencies]
-tauri = { version = "1", features = [ "http-all", "fs-all", "path-all", "protocol-asset", "shell-open"] }
+tauri = { version = "1", features = [ "path-all", "protocol-asset", "shell-open"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
